--- a/roles/kubernetes/node/templates/azure-cloud-config.j2
+++ b/roles/kubernetes/node/templates/azure-cloud-config.j2
@@ -1,4 +1,5 @@
 {
+  {% if azure_cloud|default(false) %}"cloud": "{{ azure_cloud }}",{% endif %}
   "tenantId": "{{ azure_tenant_id }}",
   "subscriptionId": "{{ azure_subscription_id }}",
   "aadClientId": "{{ azure_aad_client_id }}",
